--- a/index.html
+++ b/index.html
@@ -549,8 +549,25 @@
                 </div>
             </section>
 
+            <!--===== CV =====-->
+            <section class="section cv" id="cv">
+                <h2 class="section-title">CV</h2>
+                
+                <div class="cv__container bd-grid">
+					<h3 class="cv__subtitle">My CV in English:</h3>
+						<span class="cv__text">
+							<a href="https://drive.google.com/file/d/1lWcexUixE9BgKDqUGXsDn0MNdkQX6BGf/view?usp=drive_link">https://drive.google.com/file/d/1lWcexUixE9BgKDqUGXsDn0MNdkQX6BGf/view?usp=drive_link</a>
+						</span>
+							
+					<h3 class="cv__subtitle">Mein Lebenslauf in deutscher Sprache:</h3>
+						<span class="cv__text">
+							<a href="https://drive.google.com/file/d/1Q4OFUhNkKo4OnTeRtTPld0yDPZi0WOkf/view?usp=drive_link">https://drive.google.com/file/d/1Q4OFUhNkKo4OnTeRtTPld0yDPZi0WOkf/view?usp=drive_link</a>
+						</span>
+				</div>
+			</section>
+
             <!--===== CONTACT =====-->
-            <section class="contact section" id="contact">
+            <section class="section contact" id="contact">
                 <h2 class="section-title">Contact</h2>
 
                 <div class="contact__container bd-grid">
@@ -572,7 +589,7 @@
         </main>
 
         <!--===== FOOTER =====-->
-        <footer class="footer section">
+        <footer class="section footer">
             <div class="footer__container bd-grid">
                 <div class="footer__data">
                     <h2 class="footer__title">VITALII FLEGANOV</h2>
