--- a/index.html
+++ b/index.html
@@ -22,12 +22,24 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
-                        <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-                        <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                        <li class="nav__item"><a href="#portfolio" class="nav__link">Portfolio</a></li>
-                        <li class="nav__item"><a href="#cv" class="nav__link">CV</a></li>
-                        <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                        <li class="nav__item"><a href="#home" class="nav__link active" data-translate="home">Home</a></li>
+                        <li class="nav__item"><a href="#about" class="nav__link" data-translate="about">About</a></li>
+                        <li class="nav__item"><a href="#skills" class="nav__link" data-translate="skills">Skills</a></li>
+                        <li class="nav__item"><a href="#portfolio" class="nav__link" data-translate="portfolio">Portfolio</a></li>
+                        <li class="nav__item"><a href="#cv" class="nav__link" data-translate="cv">CV</a></li>
+                        <li class="nav__item"><a href="#contact" class="nav__link" data-translate="contact">Contact</a></li>
+                        
+                        <!-- Language Dropdown -->
+                        <li class="nav__item nav__lang">
+							<a href="#" class="nav__link lang-toggle" id="lang-toggle">
+								<span data-translate="language">🇬🇧 Language</span> 
+								<i class='bx bx-chevron-down'></i>
+							</a>
+							<ul class="lang-dropdown" id="lang-dropdown">
+								<li><a href="#" class="lang-option" data-lang="en">🇬🇧 English (EN)</a></li>
+								<li><a href="#" class="lang-option" data-lang="ru">🇷🇺 Русский (RU)</a></li>
+							</ul>
+						</li>
                     </ul>
                 </div>
 
