--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <title>Portfolio responsive complete</title>
     </head>
-    <body>
+    <body lang="en">
         <!--===== HEADER =====-->
         <header class="l-header">
             <nav class="nav bd-grid">
@@ -65,7 +65,8 @@
             
             <!--===== ABOUT =====-->
             <section class="about section" id="about">
-                <h2 class="section-title">About</h2>
+                <h2 class="section-title" lang="en">About</h2>
+                <h2 class="section-title" lang="ru">Обо мне</h2>
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
@@ -82,7 +83,9 @@
 							<b>Transforming Challenges into High-Performance Web Solutions</b>
 						</p>
 						<p class="about__text">
-							As a seasoned <b>Full-Stack Web Developer</b> with over <b>10 years of hands-on experience</b>, I specialize in <b>crafting scalable, lightning-fast web applications</b> for e-commerce, marketplaces, and business-critical platforms from scratch.<br>
+							As a seasoned <b>Full-Stack Web Developer</b> with over <b>10 years of hands-on experience</b>, I specialize in <b>crafting scalable, lightning-fast web applications</b> for e-commerce, marketplaces, and business-critical platforms from scratch.
+						</p>
+						<p class="about__text">
 							My weapon of choice?<br>
 							<b>PHP, JavaScript, Laravel, HTML, CSS, and MariaDB.</b> But it’s not just about tech skills – it’s about <b>delivering real results</b> under tight deadlines and budgets.
 						</p>
