--- a/ru/index.html
+++ b/ru/index.html
@@ -134,7 +134,7 @@
 							<b>Эксперт в:</b> PHP · JavaScript · Laravel · MariaDB · Масштабируемой веб-архитектуре<br>
 							Разработал <b>высокоэффективные решения для электронной коммерции и маркетплейсов</b>, стабильно превосходя цели клиентов.<br>
 							Владею <b>эффективными методами кодирования, дизайном MVC и оптимизацией производительности</b>.<br>
-							<b>Моя суперсла? Упорство.</b> Я — программист-бульдозер, который <b>решает нерешаемые задачи</b>.
+							<b>Моя суперсила? Упорство.</b> Я — программист-бульдозер, который <b>решает нерешаемые задачи</b>.
 						</p>
 						
 						<h2 class="about__subtitle">
