--- a/ru/index.html
+++ b/ru/index.html
@@ -56,7 +56,7 @@
                     <h1 class="home__title"><span>HE</span><br>LLO.</h1>
 
                     <div class="home__scroll">
-                        <a href="#about" class="home__scroll-link"><i class='bx bx-up-arrow-alt' ></i>Scroll down</a>
+                        <a href="#about" class="home__scroll-link"><i class='bx bx-up-arrow-alt' ></i>Прокрутите дальше</a>
                     </div>
 
                     <img src="../assets/img/vitalii_fleganov.png" alt="" class="home__img hidden">
@@ -86,7 +86,7 @@
 						</p>
 						<h3 class="about__subtitle">
 							Моё главное оружие?
-						</h2>
+						</h3>
 						<p class="about__text">
 							<b>PHP, JavaScript, Laravel, HTML, CSS и MariaDB.</b>
 							Но дело не только в технологиях — важно уметь достигать реальных результатов в условиях жёстких сроков и ограниченных бюджетов.
@@ -96,7 +96,7 @@
 						</p>
 						<h3 class="about__subtitle">
 							Что мною движет?
-						</h2>
+						</h3>
 						<p class="about__text">
 							Задания. Сложные проблемы. Кажущиеся неразрешимыми задачи.
 						</p>
@@ -105,7 +105,7 @@
 						</p>
 						<h3 class="about__subtitle">
 							Нужны доказательства?
-						</h2>
+						</h3>
 						<p class="about__text">
 							Однажды в рамках мизерного бюджета клиента нужно было сделать <b>проект маркетплейса</b>. Для этого я взял заброшенный проект с открытым исходным кодом с GitHub, исправил в нём критические ошибки, оптимизировал производительность и сдал <b>полностью рабочий продукт</b>. Это не просто кодинг — <b>это превращение ограничений в инновации</b>.
 						</p>
@@ -138,35 +138,35 @@
 						</p>
 						
 						<h2 class="about__subtitle">
-							Detailed Profile
+							Детальный профиль
 						</h2>
 						<span class="about__profession">
-							<b>The Story Behind My Craft</b>
+							<b>История, стоящая за моим делом</b>
 						</span>
 						<p class="about__text">
-							<b>With 12+ years of freelance experience (since 2010, with a strong focus post-2020), I’ve honed my skills across:</b><br>
-								<b>◦ Languages:</b> PHP, JavaScript (and legacy C/C++ projects)<br>
-								<b>◦ Frameworks:</b> Laravel, Vanilla JS, jQuery<br>
-								<b>◦ Databases:</b> MariaDB, MySQL, occasional NoSQL tweaks<br>
-								<b>◦ Front-End:</b> Pixel-perfect HTML, CSS, responsive design
+							<b>С более чем 12 годами опыта работы в коммерческой сфере и сфере фриланса (с 2010 года, с особым акцентом на период после 2020 года) я отточил свои навыки в следующих областях:</b><br>
+								<b>◦ Языки программирования:</b> PHP, JavaScript (а также поддержка legacy-проектов на C/C++)<br>
+								<b>◦ Фреймворки:</b> Laravel, Vanilla JS, jQuery<br>
+								<b>◦ Базы данных:</b> MariaDB, MySQL, периодическая работа с NoSQL<br>
+								<b>◦ Front-End:</b> Пиксельно-точная вёрстка (HTML, CSS), адаптивный дизайн (responsive design)
 						</p>
 						<p class="about__text">
-							<b>Freelancing isn’t just a job – it’s a survival challenge. Paid only for results, I learned to:</b><br>
-								1. <b>Hyper-focus</b> on high-leverage tasks.<br>
-								2. <b>Innovate on a shoestring budget</b> (e.g., reviving dead open-source projects).<br>
-								3. <b>Guarantee timely delivery</b> (no excuses, no delays).
+							<b>Фриланс для меня — это не просто работа, а настоящее испытание на выживание. Поскольку оплата идёт только за результат, то я научился:</b><br>
+								1. <b>Сверхконцентрации</b> на задачах, дающих максимальный эффект.<br>
+								2. <b>Инновациям в условиях минимального бюджета</b> (например, реанимировать заброшенные open-source проекты).<br>
+								3. <b>Гарантировать сдачу работы точно в срок</b> (никаких оправданий, никаких задержек).
 						</p>
 						<p class="about__text">
-							<b>My Workflow Philosophy:</b><br>
-								◦ <b>K.I.S.S. →</b> Less is more. Clean, minimal code = fewer bugs.<br>
-								◦ <b>MVC Mastery →</b> Structured, testable, maintainable projects.<br>
-								◦ <b>Performance obsession →</b> Fast, SEO-friendly, scalable apps.
+							<b>Философия моей работы:</b><br>
+								◦ <b>K.I.S.S. →</b> (Keep It Super Simple — "Делай максимально просто"). Меньше — значит больше. Чистый, минималистичный код = меньше ошибок.<br>
+								◦ <b>Мастерство MVC →</b> (Model-View-Controller). Упорядоченные, тестируемые, легко поддерживаемые проекты.<br>
+								◦ <b>Приоритет на производительности. →</b> Быстрые, SEO-дружественные, масштабируемые приложения.
 						</p>
+						<h3 class="about__subtitle">
+							<b>Хотите сотрудничать?</b>
+						</h3>
 						<p class="about__text">
-							<b>Ready to Collaborate?</b>
-						</p>
-						<p class="about__text">
-							If my profile resonates with your project needs – whether it’s <b>legacy code rescue, marketplace development, or custom web apps</b> – let’s chat. No fluff, just <b>straightforward expertise</b>.
+							Если мой профиль соответствует потребностям вашего проекта — будь то <b>модернизация устаревшего кода, разработка маркетплейса или заказное веб-приложение</b>, то давайте обсудим детали. Без лишних слов, только <b>конкретный опыт и экспертиза</b>.
 						</p>
 
                         <div class="about__social">
@@ -180,7 +180,7 @@
 
             <!--===== SKILLS =====-->
             <section class="skills section" id="skills">
-                <h2 class="section-title">Skills</h2>
+                <h2 class="section-title">Навыки</h2>
 
                 <div class="skills__container bd-grid">
                     <div class="skills__box">
@@ -624,11 +624,12 @@
                 <div class="footer__data">
                     <h2 class="footer__title">EXPLORE</h2>
                     <ul>
-                        <li><a href="#home" class="footer__link">Home</a></li>
-                        <li><a href="#about" class="footer__link">About</a></li>
-                        <li><a href="#skills" class="footer__link">Skills</a></li>
-                        <li><a href="#portfolio" class="footer__link">Portfolio</a></li>
-                        <li><a href="#Contact" class="footer__link">Contact</a></li>
+                        <li><a href="#home" class="footer__link">Главная</a></li>
+                        <li><a href="#about" class="footer__link">Обо мне</a></li>
+                        <li><a href="#skills" class="footer__link">Навыки</a></li>
+                        <li><a href="#portfolio" class="footer__link">Портфолио</a></li>
+                        <li><a href="#cv" class="footer__link">CV</a></li>
+                        <li><a href="#contact" class="footer__link">Контакты</a></li>
                     </ul>
                 </div>
                 
