--- a/index.html
+++ b/index.html
@@ -619,7 +619,8 @@
                         <li><a href="#about" class="footer__link">About</a></li>
                         <li><a href="#skills" class="footer__link">Skills</a></li>
                         <li><a href="#portfolio" class="footer__link">Portfolio</a></li>
-                        <li><a href="#Contact" class="footer__link">Contact</a></li>
+                        <li><a href="#cv" class="footer__link">CV</a></li>
+                        <li><a href="#contact" class="footer__link">Contact</a></li>
                     </ul>
                 </div>
                 
