--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 							<b>Role:</b> Web 3.0 Developer &amp; System Architect
 						</div>
 						<div class="experience__text">
-							Pioneering the Future of Web3: Architecting Decentralized Solutions with Blockchain & MERN Mastery
+							Pioneering the Future of Web3: Architecting Decentralized Solutions with Blockchain &amp; MERN Mastery
 							<br><br>
 							As a Web 3.0 programmer, I spearheaded the development of cutting-edge decentralized applications (dApps) that merged the power of the MERN stack (MongoDB, Express.js, React.js, Node.js) with immutable blockchain technology. My mission? To transform traditional web architectures into secure, transparent, and user-centric ecosystems.
 						</div>
@@ -336,7 +336,7 @@
 						<b>The key objectives were:</b><br>
 						- <b>Blockchain Integration:</b> Seamlessly embed blockchain protocols (Solidity, Web3.js) into existing MERN projects.<br>
 						- <b>AI-Driven Authentication:</b> Build an <b>ID card verification module</b> using <b>Flask (Python)</b> for AI-powered image recognition + <b>blockchain validation</b> for tamper-proof logs.<br>
-						- <b>Real-Time Consensus</b>: Implement <b>distributed ledger technology</b> for enterprise clients, ensuring <b>data integrity &amp; transparency</b>.
+						- <b>Real-Time Consensus:</b> Implement <b>distributed ledger technology</b> for enterprise clients, ensuring <b>data integrity &amp; transparency</b>.
 						</div>
 						<div class="experience__text">
 							<b>Key Achievements:</b>
