--- a/index.html
+++ b/index.html
@@ -572,12 +572,12 @@
                 <div class="cv__container bd-grid">
 					<h3 class="cv__subtitle">My CV in English:</h3>
 						<span class="cv__text">
-							<a href="https://drive.google.com/file/d/1lWcexUixE9BgKDqUGXsDn0MNdkQX6BGf/view?usp=drive_link">https://drive.google.com/file/d/1lWcexUixE9BgKDqUGXsDn0MNdkQX6BGf/view?usp=drive_link</a>
+							<a href="https://drive.google.com/file/d/1lWcexUixE9BgKDqUGXsDn0MNdkQX6BGf/view?usp=drive_link">https://drive.google.com/file/d/1lWcexUixE9BgKDqUGXsDn0MNdkQX6BGf/</a>
 						</span>
 							
 					<h3 class="cv__subtitle">Mein Lebenslauf in deutscher Sprache:</h3>
 						<span class="cv__text">
-							<a href="https://drive.google.com/file/d/1Q4OFUhNkKo4OnTeRtTPld0yDPZi0WOkf/view?usp=drive_link">https://drive.google.com/file/d/1Q4OFUhNkKo4OnTeRtTPld0yDPZi0WOkf/view?usp=drive_link</a>
+							<a href="https://drive.google.com/file/d/1Q4OFUhNkKo4OnTeRtTPld0yDPZi0WOkf/view?usp=drive_link">https://drive.google.com/file/d/1Q4OFUhNkKo4OnTeRtTPld0yDPZi0WOkf/</a>
 						</span>
 				</div>
 			</section>
