--- a/ru/index.html
+++ b/ru/index.html
@@ -166,7 +166,7 @@
 							<b>Хотите сотрудничать?</b>
 						</h3>
 						<p class="about__text">
-							Если мой профиль соответствует потребностям вашего проекта — будь то <b>модернизация устаревшего кода, разработка маркетплейса или заказное веб-приложение</b>, то давайте обсудим детали. Без лишних слов, только <b>конкретный опыт и экспертиза</b>.
+							Если мой профиль соответствует потребностям вашего проекта — будь то <b>модернизация устаревшего кода, разработка маркетплейса или заказ веб-приложения</b>, то давайте обсудим детали. Без лишних слов, только <b>конкретный опыт и экспертиза</b>.
 						</p>
 
                         <div class="about__social">
@@ -589,12 +589,12 @@
                 <div class="cv__container bd-grid">
 					<h3 class="cv__subtitle">My CV in English (Моё CV на английском):</h3>
 						<span class="cv__text">
-							<a href="https://drive.google.com/file/d/1lWcexUixE9BgKDqUGXsDn0MNdkQX6BGf/view?usp=drive_link">https://drive.google.com/file/d/1lWc...6BGf/view?usp=drive_link</a>
+							<a href="https://drive.google.com/file/d/1lWcexUixE9BgKDqUGXsDn0MNdkQX6BGf/view?usp=drive_link">https://drive.google.com/file/d/1lWc...6BGf/</a>
 						</span>
 							
 					<h3 class="cv__subtitle">Mein Lebenslauf in deutscher Sprache (Моё CV на немецком):</h3>
 						<span class="cv__text">
-							<a href="https://drive.google.com/file/d/1Q4OFUhNkKo4OnTeRtTPld0yDPZi0WOkf/view?usp=drive_link">https://drive.google.com/file/d/1Q4O...WOkf/view?usp=drive_link</a>
+							<a href="https://drive.google.com/file/d/1Q4OFUhNkKo4OnTeRtTPld0yDPZi0WOkf/view?usp=drive_link">https://drive.google.com/file/d/1Q4O...WOkf/</a>
 						</span>
 				</div>
 			</section>
@@ -608,7 +608,7 @@
                         <h3 class="contact__subtitle">EMAIL</h3>
                         <span class="contact__text">dmopenkoder@proton.me</span>
                         <span class="contact__text">
-							Чтобы написать мне, удалите первые две буквы 'dm' из локальной части (перед символом '@'). Это защита от спама.
+							Чтобы написать мне, удалите первые две буквы 'dm' в начале (перед символом '@'). Это защита от спама.
 						</span>
 
                         <h3 class="contact__subtitle">ТЕЛЕФОН (WhatsApp)</h3>
